--- a/content/zh/docs/installation/极简版安装.md
+++ b/content/zh/docs/installation/极简版安装.md
@@ -2,8 +2,8 @@
 
 极简版安装的使用主体主要针对高校和个人测试环境，相对企业安装流程更简单快捷。
 
--   **[安装准备](安装准备1.md)**  
+-   **[安装准备](安装准备.md)**  
 
--   **[单节点安装](单节点安装.md)**  
+-   **[服务器安装](服务器安装.md)**  
 
--   **[一主一备节点安装](一主一备节点安装.md)**  
+-   **[容器安装](容器安装.md)**  
