【文档重组】性能优化指南lite版中文+index更新

--- a/content/docs-lite/zh/docs/PerformanceTuning/设置控制组.md
+++ b/content/docs-lite/zh/docs/PerformanceTuning/设置控制组.md
@@ -4,7 +4,7 @@
 
 openGauss资源负载管理的核心是资源池，而配置资源池首先要在环境中实现控制组Cgroups的设置。更多Cgroups的原理介绍，请查看相关操作系统的产品手册。openGauss的控制组请参考[查看控制组的信息](#zh-cn_topic_0066854607_s66a16734a4e54c00abaaa1cc44c82c89)。
 
-Class控制组为数据库业务运行所在的顶层控制组，集群部署时会自动生成默认子Class控制组“DefaultClass”。DefaultClass的Medium控制组会含有系统触发的作业在运行，该控制组不允许进行资源修改，且运行在该控制组上的作业不受资源管理的控制，所以推荐创建新的子Class及其Workload控制组来设置资源比例。
+Class控制组为数据库业务运行所在的顶层控制组，数据库实例部署时会自动生成默认子Class控制组“DefaultClass”。DefaultClass的Medium控制组会含有系统触发的作业在运行，该控制组不允许进行资源修改，且运行在该控制组上的作业不受资源管理的控制，所以推荐创建新的子Class及其Workload控制组来设置资源比例。
 
 ## 前提条件<a name="section1034014512269"></a>
 
@@ -13,12 +13,10 @@ Class控制组为数据库业务运行所在的顶层控制组，集群部署时
 ## 操作步骤<a name="zh-cn_topic_0066854607_section5658359019124"></a>
 
 >![](public_sys-resources/icon-note.gif) **说明：** 
-
->-   在openGauss中，需要在每个集群节点上执行控制组的创建、更新、删除操作，才能实现对整个集群资源的控制，所以下述步骤中都使用《工具参考》中“服务端工具 \> gs\_ssh”命令执行。
-
+>
+>-   在openGauss中，需要在每个数据库实例节点上执行控制组的创建、更新、删除操作，才能实现对整个数据库实例资源的控制，所以下述步骤中都使用《工具参考》中“服务端工具 \> gs\_ssh”命令执行。
 >-   控制组的命名要求如下：
-
->    -   无论是子Class控制组还是Workload控制组，都不允许在名称中包含字符“：”。
+>    -   无论是子Class控制组还是Workload控制组，都不允许在名称中包含字符”：”。
 >    -   不可以创建同名的控制组。
 
 **创建子Class控制组和Workload控制组**
@@ -63,14 +61,15 @@ Class控制组为数据库业务运行所在的顶层控制组，集群部署时
     gs_ssh -c "gs_cgroup -u -S class_a -s 30"
     ```
 
-2.  更新“class\_a”下的“workload\_a1”的CPU资源配额为“class\_a”的30%。
+2.  更新“class\_a ”下的“workload\_a1”的CPU资源配额为“class\_a ”的30%。
 
     ```
     gs_ssh -c "gs_cgroup -u -S class_a -G workload_a1 -g 30"
     ```
 
     >![](public_sys-resources/icon-notice.gif) **须知：** 
-    >调整后的Workload控制组“workload\_a1”占有的CPU资源不应大于其对应的子Class控制组“class\_a”。并且，此名称不能是Timeshare Cgroup的默认名称，如“Low”、“Medium”、“High”或“Rush”。
+    >
+    >调整后的Workload控制组“workload\_a1”占有的CPU资源不应大于其对应的子Class控制组class\_a 。并且，此名称不能是Timeshare Cgroup的默认名称，如“Low”、“Medium”、“High”或“Rush”。
 
 
 **删除控制组**
@@ -84,6 +83,7 @@ Class控制组为数据库业务运行所在的顶层控制组，集群部署时
     以上操作可以删除控制组“class\_a”。
 
     >![](public_sys-resources/icon-notice.gif) **须知：** 
+    >
     >root用户或者具有root访问权限的用户指定“-d” 和“-U username”删除普通用户“username”可访问的默认Cgroups。普通用户指定“-d”和“-S classname”可以删除已有的Class Cgroups。
 
 
@@ -313,10 +313,9 @@ Class控制组为数据库业务运行所在的顶层控制组，集群部署时
 
 3.  通过系统视图获取控制组配置信息。
 
-    a.[使用gsql连接](使用gsql连接.md)数据库。
-    
-    b.获取系统中所有控制组的配置信息。
-    
+    1.  [使用gsql连接](使用gsql连接.md)数据库。
+    2.  获取系统中所有控制组的配置信息。
+
     ```
     openGauss=# SELECT * FROM gs_all_control_group_info;
     ```
