--- a/content/docs-lite/zh/docs/PerformanceTuning/资源规划.md
+++ b/content/docs-lite/zh/docs/PerformanceTuning/资源规划.md
@@ -2,7 +2,7 @@
 
 完成资源负载管理功能配置前，需要先根据业务模型完成租户资源的规划。业务运行一段时间后，可以根据资源的使用情况再进行配置调整。
 
-本章节我们假设某大型企业内的两个部门共用同一套集群，openGauss通过将同一个部门需要使用的系统资源集合划分为系统的一个租户，以此来实现不同部门间的资源隔离，其资源规划如[表1](#table65031957184315)所示。
+本章节我们假设某大型企业内的两个部门共用同一套数据库实例，openGauss通过将同一个部门需要使用的系统资源集合划分为系统的一个租户，以此来实现不同部门间的资源隔离，其资源规划如[表1](#table65031957184315)所示。
 
 **表 1**  租户资源规划
 
