--- a/content/docs-lite/zh/docs/PerformanceTuning/内存.md
+++ b/content/docs-lite/zh/docs/PerformanceTuning/内存.md
@@ -1,8 +1,8 @@
-# 内存<a name="ZH-CN_TOPIC_0245374522"></a>
+# 内存<a name="ZH-CN_TOPIC_0289900635"></a>
 
 通过top命令查看openGauss节点内存使用情况，分析是否存在由于内存占用率过高导致的性能瓶颈。
 
-## 查看内存状况<a name="zh-cn_topic_0237121487_zh-cn_topic_0073253547_zh-cn_topic_0040046523_section31350235191024"></a>
+## 查看内存状况<a name="zh-cn_topic_0283137367_zh-cn_topic_0237121487_zh-cn_topic_0073253547_zh-cn_topic_0040046523_section31350235191024"></a>
 
 查询服务器内存的使用情况主要通过以下方式：
 
@@ -33,14 +33,14 @@ KiB Swap:  8242172 total,  8242172 free,        0 used. 13366219+avail Mem
 -   total：物理内存总量。
 -   used：已使用的物理内存总量。
 -   free：空闲内存总量。
--   buffers：进程使用的虚拟内存总量。
+-   buffers：缓存的内存量。
 -   %MEM：进程占用的内存百分比。
--   VIRT：进程使用的虚拟内存总量，VIRT=SWAP+RES。
--   SWAP：进程使用的虚拟内存中已被换出到交换分区的量。
--   RES：进程使用的虚拟内存中未被换出的量。
+-   VIRT：进程申请的虚拟内存总量。
+-   SWAP：进程使用的交换分区的总量。
+-   RES：进程使用的物理内存总量。
 -   SHR：共享内存大小。
 
-## 性能参数分析<a name="zh-cn_topic_0237121487_zh-cn_topic_0073253547_zh-cn_topic_0040046523_section4615314285845"></a>
+## 性能参数分析<a name="zh-cn_topic_0283137367_zh-cn_topic_0237121487_zh-cn_topic_0073253547_zh-cn_topic_0040046523_section4615314285845"></a>
 
 1.  以root用户执行“free”命令查看cache的占用情况。
 
@@ -57,15 +57,13 @@ KiB Swap:  8242172 total,  8242172 free,        0 used. 13366219+avail Mem
     Swap:      4192924          0    4192924
     ```
 
-2.  若“cache”占用过高，请执行如下命令开启自动清除缓存功能。
+2.  若“cache”占用过高，请导入环境变量后执行如下命令清除缓存。
 
     ```
-    sh openGauss-server/src/bin/scripts/run_drop_cache.sh
+    /sbin/sysctl -w vm.drop_caches=3
     ```
-    其中，openGauss-server为仓库代码，下载地址:[https://gitee.com/opengauss/openGauss-server.git](https://gitee.com/opengauss/openGauss-server.git)
 
-3. 若用户内存占用过高，需查看执行计划，重点分析以下内容。
-
-   是否有不合理的join顺序。例如，多表关联时，执行计划中优先关联的两表的中间结果集比较大，导致最终执行代价比较大。
+3.  若用户内存占用过高，需查看执行计划，重点分析以下内容。
+    -   是否有不合理的join顺序。例如，多表关联时，执行计划中优先关联的两表的中间结果集比较大，导致最终执行代价比较大。
 
 
