--- a/content/docs-lite/zh/docs/PerformanceTuning/数据库服务端及客户端绑核.md
+++ b/content/docs-lite/zh/docs/PerformanceTuning/数据库服务端及客户端绑核.md
@@ -1,4 +1,4 @@
-# 数据库服务端及客户端绑核<a name="ZH-CN_TOPIC_0263913273"></a>
+# 数据库服务端及客户端绑核<a name="ZH-CN_TOPIC_0289900458"></a>
 
 1.  安装openGauss数据库，具体操作请参考《openGauss 安装指南》。
 2.  停止数据库，具体操作请参考《openGauss 管理员指南》中的“启停openGauss”章节。
@@ -8,6 +8,8 @@
     ```
     advance_xlog_file_num = 100
     numa_distribute_mode = 'all'
+    numa_distribute_mode = 'all'
+    thread_pool_attr = '812,4,(cpubind:0-27,32-59,64-91,96-123)'
     thread_pool_attr = '464,4,(cpubind:1-27,32-59,64-91,96-123)'
     xloginsert_locks = 16
     wal_writer_cpu=0
@@ -22,11 +24,12 @@
     numactl -C 1-27,32-59,64-91,96-123 gaussdb --single_node -D /data1/gaussdata  -p 3625 &
     ```
 
-    其中0核用于wal_writer、1-27、32-59、64-91、96-123表示使用111个核运行TPCC程序，其余的16个核用来处理服务端的网络中断。
+    其中0核用于wal\_writer，1-27，32-59，64-91，96-123表示使用111个核运行TPCC程序，其余的16个核用来处理服务端的网络中断。
 
 6.  执行如下命令，将客户端CPU的48个核与网卡中断队列进行绑定：
 
     ```
     sh bind_net_irq.sh  48
     ```
-   
+
+
