--- a/content/docs-lite/zh/docs/PerformanceTuning/文件系统配置.md
+++ b/content/docs-lite/zh/docs/PerformanceTuning/文件系统配置.md
@@ -1,34 +1,33 @@
-# 文件系统配置<a name="ZH-CN_TOPIC_0263913268"></a>
+# 文件系统配置<a name="ZH-CN_TOPIC_0289900419"></a>
 
 为了提升数据库的IO效率，我们使用NVME盘作为数据盘，需要采用的文件系统类型为xfs，数据块大小为8KB。具体操作如下：
 
-1. <a name="li13131455153313"></a>查看当前数据盘的文件系统类型。
+1.  <a name="zh-cn_topic_0283136945_zh-cn_topic_0263913268_li13131455153313"></a>查看当前数据盘的文件系统类型。
+    1.  执行如下命令查看当前挂载的nvme盘。
 
-   a. 执行如下命令查看当前挂载的nvme盘。
+        ```
+        df -h | grep nvme
+        ```
 
-   ```
-   df -h | grep nvme
-   ```
+        结果如下。
 
-   结果如下。
+        ```
+        /dev/nvme0n1                3.7T  2.6T  1.2T  69% /data1 
+        /dev/nvme1n1                3.7T  1.9T  1.8T  51% /data2 
+        /dev/nvme2n1                3.7T  2.2T  1.6T  59% /data3 
+        /dev/nvme3n1                3.7T  1.4T  2.3T  39% /data4
+        ```
 
-   ```
-   /dev/nvme0n1                3.7T  2.6T  1.2T  69% /data1 
-   /dev/nvme1n1                3.7T  1.9T  1.8T  51% /data2 
-   /dev/nvme2n1                3.7T  2.2T  1.6T  59% /data3 
-   /dev/nvme3n1                3.7T  1.4T  2.3T  39% /data4
-   ```
+    2.  执行如下命令查看nvme盘的信息。
 
-   b.执行如下命令查看nvme盘的信息。
+        ```
+        xfs_info
+        ```
 
-   ```
-   xfs_info
-   ```
+        例如执行命令**xfs\_info /data1**，如[图1](#fig790551418911)所示，block的大小正好为8KB，不需要修改；若block不满足8kB大小的要求，需要重新格式化，格式化前请将数据进行备份。
 
-   例如执行命令**xfs\_info /data1**，如[图1](#fig16848819124216)所示，block的大小正好为8KB，不需要修改；若block不满足8kB大小的要求，需要重新格式化，格式化前请将数据进行备份。
-
-   **图 1**  查看nvme盘的信息<a name="fig16848819124216"></a>  
-   ![](figures/查看nvme盘的信息.png "查看nvme盘的信息")
+        **图 1**  查看nvme盘的信息<a name="fig790551418911"></a>  
+        ![](figures/查看nvme盘的信息.png "查看nvme盘的信息")
 
 2.  对于需要修改的磁盘，备份所需的数据至其他磁盘或其他服务器。
 3.  格式化磁盘为xfs文件系统。
@@ -41,5 +40,5 @@
     mount /dev/nvme0n1 /data1
     ```
 
-4.  执行[步骤一](#li13131455153313)，确认blocksize是否已修改为8KB。
+4.  执行[步骤一](#zh-cn_topic_0283136945_zh-cn_topic_0263913268_li13131455153313)，确认blocksize是否已修改为8KB。
 
