--- a/content/docs-lite/zh/docs/PerformanceTuning/详解.md
+++ b/content/docs-lite/zh/docs/PerformanceTuning/详解.md
@@ -57,7 +57,6 @@ SELECT * FROM t1, t2 WHERE t1.c1 = t2.c2;
             使用简单索引搜索，该方式表的数据行是以索引顺序抓取的，这样就令读取它们的开销更大，但是这里的行少得可怜，因此对行位置的额外排序并不值得。最常见的就是看到这种规划类型只抓取一行，以及那些要求ORDER BY条件匹配索引顺序的查询。因为那时候没有多余的排序步骤是必要的以满足ORDER BY。
 
 
-
 2.  表连接方式
     -   Nested Loop
 
@@ -71,7 +70,6 @@ SELECT * FROM t1, t2 WHERE t1.c1 = t2.c2;
 
         归并连接，通常情况下执行性能差于哈希连接。如果源数据已经被排序过，在执行融合连接时，并不需要再排序，此时融合连接的性能优于哈希连接。
 
-
 3.  运算符
     -   sort
 
@@ -79,7 +77,7 @@ SELECT * FROM t1, t2 WHERE t1.c1 = t2.c2;
 
     -   filter
 
-        EXPLAIN输出显示WHERE子句当作一个“filter”条件附属于顺序扫描计划节点。这意味着规划节点为它扫描的每一行检查该条件，并且只输出符合条件的行。预计的输出行数降低了，因为有WHERE子句。不过，扫描仍将必须访问所有 10000 行，因此开销没有降低；实际上它还增加了一些（确切的说，通过10000 \* cpu\_operator\_cost）以反映检查WHERE条件的额外CPU时间。
+        EXPLAIN输出显示WHERE子句当作一个"filter"条件附属于顺序扫描计划节点。这意味着规划节点为它扫描的每一行检查该条件，并且只输出符合条件的行。预计的输出行数降低了，因为有WHERE子句。不过，扫描仍将必须访问所有 10000 行，因此开销没有降低；实际上它还增加了一些（确切的说，通过10000 \* cpu\_operator\_cost）以反映检查WHERE条件的额外CPU时间。
 
     -   LIMIT
 
