--- a/content/docs-lite/zh/docs/PerformanceTuning/选择数据类型.md
+++ b/content/docs-lite/zh/docs/PerformanceTuning/选择数据类型.md
@@ -1,10 +1,10 @@
-# 选择数据类型<a name="ZH-CN_TOPIC_0245374556"></a>
+# 选择数据类型<a name="ZH-CN_TOPIC_0000001166772183"></a>
 
 高效数据类型，主要包括以下三方面：
 
 1.  **尽量使用执行效率比较高的数据类型**
 
-    一般来说整型数据运算（包括=、＞、＜、≧、≦、≠等常规的比较运算，以及group by）的效率比字符串、浮点数要高。比如某客户场景中对列存表进行点查询，filter条件在一个numeric列上，执行时间为10+s；修改numeric为int类型之后，执行时间缩短为1.8s左右。
+    一般来说整型数据运算\(包括=、＞、＜、≧、≦、≠等常规的比较运算，以及group by\)的效率比字符串、浮点数要高。比如某客户场景中对列存表进行点查询，filter条件在一个numeric列上，执行时间为10+s；修改numeric为int类型之后，执行时间缩短为1.8s左右。
 
 2.  **尽量使用短字段的数据类型**
 
