--- a/content/docs-lite/zh/docs/Administration/参数设置.md
+++ b/content/docs-lite/zh/docs/Administration/参数设置.md
@@ -1,6 +1,4 @@
-# 重设参数<a name="ZH-CN_TOPIC_0289899927"></a>
-
-## 背景信息<a name="zh-cn_topic_0283137176_zh-cn_topic_0237121562_zh-cn_topic_0059777490_s75c9285916664351b9c3e31f0735ea98"></a>
+# 参数设置<a name="ZH-CN_TOPIC_0289899927"></a>
 
 openGauss提供了多种修改GUC参数的方法，用户可以方便的针对数据库、用户、会话进行设置。
 
