--- a/content/docs-lite/zh/docs/PerformanceTuning/确定性能调优范围.md
+++ b/content/docs-lite/zh/docs/PerformanceTuning/确定性能调优范围.md
@@ -34,13 +34,11 @@
 -   如果某个资源已达瓶颈，则：
     1.  检查关键的操作系统参数和数据库参数是否合理设置，进行[系统调优指南](系统调优指南.md)。
     2.  通过查询最耗时的SQL语句、跑不出来的SQL语句，找出耗资源的SQL，进行[SQL调优指南](SQL调优指南.md)。
-
 -   如果所有资源均未达瓶颈，则表明性能仍有提升潜力。可以查询最耗时的SQL语句，或者跑不出来的SQL语句，进行针对性的[SQL调优指南](SQL调优指南.md)。
-
+-   **[性能日志](性能日志.md)**
 -   **[硬件瓶颈点分析](硬件瓶颈点分析.md)**  
 获取openGauss节点的CPU、内存、I/O和网络资源使用情况，确认这些资源是否已被充分利用，是否存在瓶颈点。
 -   **[查询最耗性能的SQL](查询最耗性能的SQL.md)**  
-
 -   **[分析作业是否被阻塞](分析作业是否被阻塞.md)**  
 
 
