--- a/content/zh/docs/PerformanceTuning/确定性能调优范围.md
+++ b/content/zh/docs/PerformanceTuning/确定性能调优范围.md
@@ -37,6 +37,8 @@
 
 -   如果所有资源均未达瓶颈，则表明性能仍有提升潜力。可以查询最耗时的SQL语句，或者跑不出来的SQL语句，进行针对性的[SQL调优指南](SQL调优指南.md)。
 
+-   **[性能日志](性能日志.md)**  
+
 - **[硬件瓶颈点分析](硬件瓶颈点分析.md)**  
 
   获取openGauss节点的CPU、内存、I/O和网络资源使用情况，确认这些资源是否已被充分利用，是否存在瓶颈点。
