--- a/content/zh/docs/Administration/默认权限机制.md
+++ b/content/zh/docs/Administration/默认权限机制.md
@@ -4,7 +4,35 @@
 
 为使其他用户能够使用对象，必须向用户或包含该用户的角色授予必要的权限。
 
-openGauss支持以下的权限：SELECT、INSERT、UPDATE、DELETE、TRUNCATE、REFERENCES、CREATE、CONNECT、EXECUTE、ALTER、DROP、COMMENT、INDEX、VACUUM和USAGE。不同的权限与不同的对象类型关联。有关各权限的详细信息，请参见[GRANT](GRANT.md)。
+openGauss支持以下的权限：SELECT、INSERT、UPDATE、DELETE、TRUNCATE、REFERENCES、CREATE、CONNECT、EXECUTE、ALTER、DROP、COMMENT、INDEX、VACUUM和USAGE等。
+
+-   SELECT：允许对指定的表、视图、序列执行SELECT命令，UPDATE或DELETE时也需要对应字段上的SELECT权限。
+-   INSERT：允许对指定的表执行INSERT命令。
+-   UPDATE：允许对声明的表中任意字段执行UPDATE命令。通常，UPDATE命令也需要SELECT权限来查询出哪些行需要更新。SELECT… FOR UPDATE和SELECT… FOR SHARE除了需要SELECT权限外，还需要UPDATE权限。
+-   DELETE：允许执行DELETE命令删除指定表中的数据。通常，DELETE命令也需要SELECT权限来查询出哪些行需要删除。
+-   TRUNCATE：允许执行TRUNCATE语句删除指定表中的所有记录。
+-   REFERENCES：创建一个外键约束，必须拥有参考表和被参考表的REFERENCES权限。
+-   CREATE：
+    -   对于数据库，允许在数据库里创建新的模式。
+    -   对于模式，允许在模式中创建新的对象。如果要重命名一个对象，用户除了必须是该对象的所有者外，还必须拥有该对象所在模式的CREATE权限。
+    -   对于表空间，允许在表空间中创建表，允许在创建数据库和模式的时候把该表空间指定为缺省表空间。
+
+-   CONNECT：允许用户连接到指定的数据库。
+-   EXECUTE：允许使用指定的函数，以及利用这些函数实现的操作符。
+-   USAGE：
+    -   对于过程语言，允许用户在创建函数的时候指定过程语言。
+    -   对于模式，USAGE允许访问包含在指定模式中的对象，若没有该权限，则只能看到这些对象的名称。
+    -   对于序列，USAGE允许使用nextval函数。
+    -   对于Data Source对象，USAGE是指访问权限，也是可赋予的所有权限，即USAGE与ALL PRIVILEGES等价。
+
+-   ALTER：允许用户修改指定对象的属性，但不包括修改对象的所有者和修改对象所在的模式。
+-   DROP：允许用户删除指定的对象。
+-   COMMENT：允许用户定义或修改指定对象的注释。
+-   INDEX：允许用户在指定表上创建索引，并管理指定表上的索引，还允许用户对指定表执行REINDEX和CLUSTER操作。
+-   VACUUM：允许用户对指定的表执行ANALYZE和VACUUM操作。
+-   ALL PRIVILEGES：一次性给指定用户/角色赋予所有可赋予的权限。只有系统管理员有权执行GRANT ALL PRIVILEGES。
+
+不同的权限与不同的对象类型关联。有关各权限的详细信息，请参见[GRANT](GRANT.md)。
 
 要撤消已经授予的权限，可以使用[REVOKE](REVOKE.md)。对象所有者的权限（例如ALTER、DROP、COMMENT、INDEX、VACUUM、GRANT和REVOKE）是隐式的，无法授予或撤消。即只要拥有对象就可以执行对象所有者的这些隐式权限。对象所有者可以撤消自己的普通权限，例如，使表对自己以及其他人只读，系统管理员用户除外。
 
