--- a/content/zh/docs/SQLReference/使用_全量物化视图.md
+++ b/content/zh/docs/SQLReference/使用_全量物化视图.md
@@ -29,6 +29,15 @@
     SELECT * FROM [ view_name ];
     ```
 
+## 参数说明<a name="section6973139183420"></a>
+
+- **view\_name**
+
+  要创建的物化视图的名称。
+
+- **AS query**
+
+  一个SELECT、TABLE 或者VALUES命令。
 
 ## 示例<a name="section653116105315"></a>
 
