--- a/content/zh/docs/installation/一主一备节点安装.md
+++ b/content/zh/docs/installation/一主一备节点安装.md
@@ -9,20 +9,33 @@
 -   安装前请检查指定的openGauss端口矩阵中所有端口是否被占用，如果被占用请更改端口或者停止当前使用端口进程。端口号请参考下方步骤三参数说明。
 
 ## 操作步骤<a name="section4241123615573"></a>
+1.  创建用户组dbgroup。
 
-1.  使用普通用户登录到包安装的主机，解压openGauss压缩包到安装目录。
+    ```
+    groupadd dbgroup
+    ```
+
+2.  创建用户组dbgroup下的普通用户omm，并设置密码为Gauss\_234 。
+
+    ```
+    useradd -g dbgroup omm
+    passwd Gauss_234
+    ```
+
+3.  使用omm登录到包安装的主机，解压openGauss压缩包到安装目录（假定安装目录为/opt/software/openGauss，请用实际值替换）。
+
 
     ```
     tar -jxf openGauss-x.x.x-openEuler-64bit.tar.bz2 -C /opt/software/openGauss
     ```
 
-2.  假定解压包的路径为/opt/software/openGauss，进入解压后目录下的simpleInstall。
+4.  假定解压包的路径为/opt/software/openGauss，进入解压后目录下的simpleInstall。
 
     ```
     cd /opt/software/openGauss/simpleInstall
     ```
 
-3.  执行install.sh脚本安装openGauss。
+5.  执行install.sh脚本安装openGauss。
 
     ```
     sh install.sh  -w xxxx  --multinode
@@ -37,7 +50,7 @@
     >-   安装后，数据库的主节点名称为nodename1，备节点名称为nodename2。  
     >-   安装后，数据库主节点目录安装路径/opt/software/openGauss/data/master，备节点目录安装路径为/opt/software/openGauss/data/slave，其中/opt/software/openGauss为解压包路径，data/master\(slave\)为新创建的数据库节点目录。  
 
-4.  安装执行完成后，使用ps和gs\_ctl查看进程是否正常。
+6.  安装执行完成后，使用ps和gs\_ctl查看进程是否正常。
 
     ```
     ps ux | grep gaussdb
