--- a/content/zh/docs/PerformanceTuning/系统调优指南.md
+++ b/content/zh/docs/PerformanceTuning/系统调优指南.md
@@ -5,7 +5,7 @@
 -   **[操作系统参数调优](操作系统参数调优.md)**  
 在性能调优过程中，可以根据实际业务情况修改关键操作系统（OS）配置参数，以提升openGauss数据库的性能。
 -   **[数据库系统参数调优](数据库系统参数调优.md)**  
--   **[配置向量化](配置向量化.md)**  
+-   **[配置向量化执行引擎](配置向量化执行引擎.md)**  
 -   **[配置SMP](配置SMP.md)**  
 -   **[配置LLVM](配置LLVM.md)**  
 -   **[配置Ustore](配置Ustore.md)**  
