--- a/content/zh/docs/DataBaseReference/系统视图.md
+++ b/content/zh/docs/DataBaseReference/系统视图.md
@@ -4,7 +4,7 @@
 
 -   **[DV\_SESSION\_LONGOPS](DV_SESSION_LONGOPS.md)**  
 
--   **[GET\_GLOBAL\_PREPARED\_XACTS（废弃）](GET_GLOBAL_PREPARED_XACTS（废弃）.md)**  
+-   **[GET\_GLOBAL\_PREPARED\_XACTS（废弃）](GET_GLOBAL_PREPARED_XACTS_废弃.md)**  
 
 -   **[GS\_AUDITING](GS_AUDITING.md)**  
 
@@ -77,8 +77,6 @@
 -   **[GS\_WLM\_SESSION\_STATISTICS](GS_WLM_SESSION_STATISTICS.md)**  
 
 -   **[GS\_WLM\_USER\_INFO](GS_WLM_USER_INFO.md)**  
-
--   **[GS\_WRITE\_TERM\_LOG](GS_WRITE_TERM_LOG.md)**  
 
 -   **[MPP\_TABLES](MPP_TABLES.md)**  
 
