--- a/content/zh/docs/DataBaseReference/连接设置.md
+++ b/content/zh/docs/DataBaseReference/连接设置.md
@@ -196,7 +196,7 @@ Unix域套接字使用普通的Unix文件系统权限集。这个参数的值应
 >    ```
 >    {"driver_name":"ODBC","driver_version": "(openGauss X.X.X build 13b34b53) compiled at 2020-05-08 02:59:43 commit 2143 last mr 131 debug","driver_path":"/usr/local/lib/psqlodbcw.so","os_user":"omm"}
 >    ```
->    默认显示driver\_name和driver\_version，driver\_path和os\_user的显示由用户控制（参见[连接数据库](连接数据库.md)和[Linux下配置数据源](Linux下配置数据源.md)）。
+>    默认显示driver\_name和driver\_version，driver\_path和os\_user的显示由用户控制（参见[连接数据库](../GettingStarted/连接数据库.md)和[Linux下配置数据源](../Developerguide/Linux下配置数据源.md)）。
 
 ## enable\_dolphin\_proto<a name="zh-cn_topic_0283137648_zh-cn_topic_0237124740_zh-cn_topic_0059778940_s450db879c7f442bba4c36ebf022f7e92"></a>
 
