--- a/content/zh/docs/DataBaseReference/GAUSS-53200----GAUSS-53299.md
+++ b/content/zh/docs/DataBaseReference/GAUSS-53200----GAUSS-53299.md
@@ -246,7 +246,7 @@ SQLSTATE:22P03
 
 错误原因：非法的Numeric输入。
 
-解决办法：请检查数据中是否包含非法的Numeric输入。关于Numeric的合法格式请参考[zh-cn\_topic\_0274503547.md](zh-cn_topic_0274503547.md)。
+解决办法：请检查数据中是否包含非法的Numeric输入。关于Numeric的合法格式请参考[数据类型.md](../SQLReference/数据类型.md)。
 
 \[GAUSS-53231\]: "invalid external 'cidr' value"
 
@@ -318,7 +318,7 @@ SQLSTATE:22P03
 
 错误原因：非法的Numeric输入。
 
-解决办法：请检查数据中是否包含非法的Numeric输入。关于Numeric的合法格式请参考[zh-cn\_topic\_0274503547.md](zh-cn_topic_0274503547.md)。
+解决办法：请检查数据中是否包含非法的Numeric输入。关于Numeric的合法格式请参考[数据类型.md](../SQLReference/数据类型.md)。
 
 \[GAUSS-53240\]: "invalid status in external 'tinterval' value"
 
