--- a/content/zh/docs/Administratorguide/分析表.md
+++ b/content/zh/docs/Administratorguide/分析表.md
@@ -21,7 +21,7 @@ ANALYZE
 
 ## 表自动分析<a name="zh-cn_topic_0237121146_zh-cn_topic_0165786590_section1274813345166"></a>
 
-openGauss提供了GUC参数[autovacuum](自动清理.md#zh-cn_topic_0237124730_zh-cn_topic_0059778244_s995913ca9df54ae5bb488d1e810bd824)用于控制数据库自动清理功能的启动。
+openGauss提供了GUC参数[autovacuum](../DataBaseReference/自动清理.md#zh-cn_topic_0237124730_zh-cn_topic_0059778244_s995913ca9df54ae5bb488d1e810bd824)用于控制数据库自动清理功能的启动。
 
 autovacuum设置为on时，系统定时启动autovacuum线程来进行表自动分析，如果表中数据量发生较大变化达到阈值时，会触发表自动分析，即autoanalyze。
 
