--- a/content/zh/docs/Developerguide/开发设计规范.md
+++ b/content/zh/docs/Developerguide/开发设计规范.md
@@ -1,6 +1,6 @@
 # 开发设计建议<a name="ZH-CN_TOPIC_0000001149748073"></a>
 
--   **[开发设计建议概述](开发设计建议概述.md)**  
+-   **[开发设计规范概述](开发设计规范概述.md)**  
 
 -   **[数据库对象命名](数据库对象命名.md)**  
 
