--- a/content/zh/docs/SQLReference/存储过程.md
+++ b/content/zh/docs/SQLReference/存储过程.md
@@ -1,12 +1,12 @@
 # 存储过程<a name="ZH-CN_TOPIC_0245374599"></a>
 
--   **[存储过程](存储过程-20.md)**  
+-   **[存储过程](存储过程_SQLReference.md)**  
 
--   **[数据类型](数据类型-21.md)**  
+-   **[数据类型](数据类型_SQLReference.md)**  
 
 -   **[数据类型转换](数据类型转换.md)**  
 
--   **[数组和record](数组和record.md)**  
+-   **[数组和record](数组-集合和record.md)**  
 
 -   **[声明语法](声明语法.md)**  
 
@@ -24,6 +24,6 @@
 
 -   **[Retry管理](Retry管理.md)** 
 
--   **[调试](调试-22.md)**  
+-   **[调试](调试-20.md)**  
 
 
