--- a/content/zh/docs/GettingStarted/配置服务端远程连接.md
+++ b/content/zh/docs/GettingStarted/配置服务端远程连接.md
@@ -8,9 +8,9 @@
 
 1. 以操作系统用户omm登录数据库主节点。
 
-2. 配置客户端认证方式，请参考[配置客户端接入认证](配置客户端接入认证.md)。
+2. 配置客户端认证方式，请参考[配置客户端接入认证](../Administration/配置客户端接入认证.md)。
 
-3. 配置[listen\_addresses](连接设置.md#zh-cn_topic_0283136886_zh-cn_topic_0237124695_zh-cn_topic_0059777636_sed0adde99a3f47669f5d4ab557b36b35)，listen\_addresses即远程客户端连接使用的数据库主节点ip或者主机名。
+3. 配置[listen\_addresses](../DataBaseReference/连接设置.md#zh-cn_topic_0283136886_zh-cn_topic_0237124695_zh-cn_topic_0059777636_sed0adde99a3f47669f5d4ab557b36b35)，listen\_addresses即远程客户端连接使用的数据库主节点ip或者主机名。
 
    使用如下命令查看数据库主节点目前的listen\_addresses配置。
 
@@ -35,7 +35,7 @@
    gs_guc set -I all -c "listen_addresses='localhost,192.168.0.100,10.11.12.13'"
    ```
 
-4. 配置pg\_hba.conf，添加数据库主节点ip和客户端ip。pg\_hba.conf的参数说明和配置方法详见[配置客户端接入认证](配置客户端接入认证.md)。
+4. 配置pg\_hba.conf，添加数据库主节点ip和客户端ip。pg\_hba.conf的参数说明和配置方法详见[配置客户端接入认证](../Administration/配置客户端接入认证.md)。
 
       a.使用如下命令添加数据库主节点ip到pg\_hba.conf，其中initial\_user为数据库初始用户名称，10.11.12.13同上述数据库主机ip。
 
