--- a/content/zh/docs/SQLReference/增量物化视图.md
+++ b/content/zh/docs/SQLReference/增量物化视图.md
@@ -1,8 +1,8 @@
 # 增量物化视图<a name="ZH-CN_TOPIC_0295970206"></a>
 
--   **[概述](概述-0.md)**  
+-   **[概述](概述_增量物化视图.md)**  
 
--   **[使用](使用-1.md)**  
+-   **[使用](使用_增量物化视图.md)**  
 
 -   **[支持和约束](支持和约束-1.md)**  
 
