--- a/content/zh/docs/SQLReference/统计信息函数.md
+++ b/content/zh/docs/SQLReference/统计信息函数.md
@@ -819,7 +819,7 @@
 
 -   pg\_stat\_get\_last\_data\_changed\_time\(oid\)
 
-    描述：insert/update/delete, exchange/truncate/drop partition在该表上最后一次操作的时间，[PG\_STAT\_ALL\_TABLES](PG_STAT_ALL_TABLES.md)视图last\_data\_changed列的数据是通过该函数求值，在表数量很大的场景中，通过视图获取表数据最后修改时间的性能较差，建议直接使用该函数获取表数据的最后修改时间。入参可以是表的oid或分区的oid，分别获取表或表的分区的最后修改时间。
+    描述：insert/update/delete, exchange/truncate/drop partition在该表上最后一次操作的时间，[PG\_STAT\_ALL\_TABLES](../DataBaseReference/PG_STAT_ALL_TABLES.md)视图last\_data\_changed列的数据是通过该函数求值，在表数量很大的场景中，通过视图获取表数据最后修改时间的性能较差，建议直接使用该函数获取表数据的最后修改时间。入参可以是表的oid或分区的oid，分别获取表或表的分区的最后修改时间。
 
     返回值类型：timestamptz
 
@@ -2596,7 +2596,7 @@
 
 -   DBE\_PERF.global\_threadpool\_status\(\)
 
-    描述：显示在所有节点上的线程池中工作线程及会话的状态信息。函数返回信息具体字段[GLOBAL\_THREADPOOL\_STATUS](zh-cn_topic_0289900218.md)字段。
+    描述：显示在所有节点上的线程池中工作线程及会话的状态信息。函数返回信息具体字段[GLOBAL\_THREADPOOL\_STATUS](GLOBAL_THREADPOOL_STATUS.md)字段。
 
     返回值类型：record
 
@@ -2608,7 +2608,7 @@
 
 -   pv\_os\_run\_info
 
-    描述：显示当前操作系统运行的状态信息，具体字段信息参考[GS\_OS\_RUN\_INFO](GS_OS_RUN_INFO.md)。
+    描述：显示当前操作系统运行的状态信息，具体字段信息参考[GS\_OS\_RUN\_INFO](../DataBaseReference/GS_OS_RUN_INFO.md)。
 
     参数：nan
 
@@ -2616,7 +2616,7 @@
 
 -   pv\_session\_stat
 
-    描述：以会话线程或AutoVacuum线程为单位，统计会话状态信息，具体字段信息参考[GS\_SESSION\_STAT](GS_SESSION_STAT.md)。
+    描述：以会话线程或AutoVacuum线程为单位，统计会话状态信息，具体字段信息参考[GS\_SESSION\_STAT](../DataBaseReference/GS_SESSION_STAT.md)。
 
     参数：nan
 
@@ -2624,7 +2624,7 @@
 
 -   pv\_session\_time
 
-    描述：用于统计会话线程的运行时间信息，及各执行阶段所消耗时间，具体字段信息参考[GS\_SESSION\_TIME](GS_SESSION_TIME.md)。
+    描述：用于统计会话线程的运行时间信息，及各执行阶段所消耗时间，具体字段信息参考[GS\_SESSION\_TIME](../DataBaseReference/GS_SESSION_TIME.md)。
 
     参数：nan
 
@@ -2753,7 +2753,7 @@
     描述：统计Session级别的内存使用情况，包含执行作业在数据节点上Postgres线程和Stream线程分配的所有内存。
 
     >![](public_sys-resources/icon-note.gif) **说明：** 
-    >若GUC参数[enable\_memory\_limit](zh-cn_topic_0289900310.md#zh-cn_topic_0283136786_zh-cn_topic_0237124699_zh-cn_topic_0059777577_s2cf6c862bad443aea7e115ff83941f94)=off，该函数不能使用。
+    >若GUC参数[enable\_memory\_limit](../DataBaseReference/内存-21.md#zh-cn_topic_0283136786_zh-cn_topic_0237124699_zh-cn_topic_0059777577_s2cf6c862bad443aea7e115ff83941f94)=off，该函数不能使用。
 
     返回值类型：record
 
