--- a/content/zh/docs/SQLReference/调试-20.md
+++ b/content/zh/docs/SQLReference/调试-20.md
@@ -23,7 +23,7 @@
 
 **参数说明：**
 
--   level选项用于指定错误级别，有DEBUG，LOG，INFO，NOTICE，WARNING以及EXCEPTION（默认值）。EXCEPTION抛出一个正常终止当前事务的异常，其他的仅产生不同异常级别的信息。特殊级别的错误信息是否报告到客户端、写到服务器日志由[log\_min\_messages](zh-cn_topic_0289900345.md#zh-cn_topic_0283137528_zh-cn_topic_0237124722_zh-cn_topic_0059778452_sc6c47ec8cc1b47e28be98dbb24b1b39a)和[client\_min\_messages](zh-cn_topic_0289900345.md#zh-cn_topic_0283137528_zh-cn_topic_0237124722_zh-cn_topic_0059778452_s2955da1f1cb24b0aa68ddc77700233e0)这两个配置参数控制。
+-   level选项用于指定错误级别，有DEBUG，LOG，INFO，NOTICE，WARNING以及EXCEPTION（默认值）。EXCEPTION抛出一个正常终止当前事务的异常，其他的仅产生不同异常级别的信息。特殊级别的错误信息是否报告到客户端、写到服务器日志由[log\_min\_messages](记录日志的时间.md#zh-cn_topic_0283137528_zh-cn_topic_0237124722_zh-cn_topic_0059778452_sc6c47ec8cc1b47e28be98dbb24b1b39a)和[client\_min\_messages](记录日志的时间.md#zh-cn_topic_0283137528_zh-cn_topic_0237124722_zh-cn_topic_0059778452_s2955da1f1cb24b0aa68ddc77700233e0)这两个配置参数控制。
 -   format：格式字符串，指定要报告的错误消息文本。格式字符串后可跟表达式，用于向消息文本中插入。在格式字符串中，%由format后面跟着的参数的值替换，%%用于打印出%。例如：
 
     ```
@@ -48,7 +48,7 @@
 
 >![](public_sys-resources/icon-note.gif) **说明：** 
 >-   [图5](#zh-cn_topic_0283137518_zh-cn_topic_0237122256_zh-cn_topic_0059777683_f6b9d7253ecad413e9ee92ba78199a6b4)所示的语法不接任何参数。这种形式仅用于一个BEGIN块中的EXCEPTION语句，它使得错误重新被处理。
->-   用于ERRCODE指定的条件名称和condition\_name可见[SQL标准错误码说明](SQL标准错误码说明.md)，仅支持其中的ERROR类条件名。
+>-   用于ERRCODE指定的条件名称和condition\_name可见[SQL标准错误码说明](../DataBaseReference/SQL标准错误码说明.md)，仅支持其中的ERROR类条件名。
 
 **EXCEPTION\_INIT语法**
 
