企业中文版修改开发者指南关键字

--- a/content/zh/docs/Administratorguide/日志参考.md
+++ b/content/zh/docs/Administratorguide/日志参考.md
@@ -128,7 +128,7 @@ OM openGauss安装卸载时产生的日志放在“/var/log/gaussdb/用户名/om
 
 审计功能开启时会不断产生大量的审计日志，占用磁盘空间。用户可以根据磁盘空间的大小设置审计日志维护策略。
 
-关于如何设置审计日志维护策略请参见《开发者指南》中“管理数据库安全 \> 设置数据库审计 \> 维护审计日志”章节。
+关于如何设置审计日志维护策略请参见《数据库管理》中“数据库安全管理 \> 设置数据库审计 \> 维护审计日志”章节。
 
 ## WAL日志<a name="section1842844603615"></a>
 
