--- a/content/zh/docs/Releasenotes/特性介绍.md
+++ b/content/zh/docs/Releasenotes/特性介绍.md
@@ -45,7 +45,7 @@
     支持在已有数据库进程时，CM解耦化安装，同时支持CM组件单独升级，增强数据库集群可靠性。
 
 -   MySQL兼容性增强
-    3.1.1版本新增对以下语法点的支持（只列举部分典型语法，详情请参见《开发者指南》中“MySQL兼容性说明”章节）：
+    3.1.1版本新增对以下语法点的支持（只列举部分典型语法，详情请参见《数据迁移》中“MySQL兼容性说明”章节）：
     -   操作符：!、->、->>。
     -   系统函数：JSON_ARRAY()、JSON_OBJECT()、JSON_QUOTE()、JSON_CONTAINS()、JSON_CONTAINS_PATH()、JSON_EXTRACT()等28个JSON类函数，支持any_value、database、default函数。
     -   DDL：
