--- a/content/zh/docs/CharacteristicDescription/全密态数据库等值查询.md
+++ b/content/zh/docs/CharacteristicDescription/全密态数据库等值查询.md
@@ -60,7 +60,7 @@
 
 - 不支持包括排序、范围查询以及模糊查询等在内的除等值以外的各种密态查询。
 
-- 支持部分函数存储过程密态语法，密态支持函数存储过程具体约束查看开发者指南密态支持函数/存储过程章节。
+- 支持部分函数存储过程密态语法，密态支持函数存储过程具体约束查看《数据库管理》数据安全管理/密态支持函数/存储过程章节。
 
 - 不支持通过insert into…select…、merge into语法将非加密表数据插入到加密表数据中。
 
