--- a/content/zh/docs/Description/企业级增强特性.md
+++ b/content/zh/docs/Description/企业级增强特性.md
@@ -94,7 +94,7 @@ openGauss支持：
 
     -   DML支持UPDATE/COPY/BULKLOAD/DELETE。
     -   不支持触发器，不支持主外键。
-    -   支持Psort index、B-tree index和GIN index，具体约束参见《开发者指南》中“SQL参考 \> SQL语法 \> CREATE INDEX”章节。
+    -   支持Psort index、B-tree index和GIN index，具体约束参见《SQL参考》中“SQL语法 \> CREATE INDEX”章节。
 
 -   列存下的数据压缩
 
@@ -165,7 +165,7 @@ openGauss通过服务器端的线程池，可以支持1W并发连接。通过NUM
 
 通过执行查询对应的explain performance，获得对应执行计划，是一种十分有效的定位查询性能问题的方法。但是这种方法需要修改业务逻辑，同时输出的日志量大，问题定位的效率依赖于人员的经验。SQL自诊断为用户提供了另一种更为高效易用的性能问题定位方法。
 
-在执行作业之前，配置GUC参数resource\_track\_level和resource\_track\_cost，然后运行用户作业，就可以通过查看相关系统视图，获得执行完成的相关查询作业可能存在的性能问题。系统视图中会给出导致性能问题的可能原因，根据这些“性能告警”，参考《开发者指南》中“性能调优 \> SQL调优指南 \> 典型SQL调优点 \> SQL自诊断”章节，就可以对存在性能问题的作业进行调优。
+在执行作业之前，配置GUC参数resource\_track\_level和resource\_track\_cost，然后运行用户作业，就可以通过查看相关系统视图，获得执行完成的相关查询作业可能存在的性能问题。系统视图中会给出导致性能问题的可能原因，根据这些“性能告警”，参考《性能优化指南》中“SQL调优指南 \> 典型SQL调优点 \> SQL自诊断”章节，就可以对存在性能问题的作业进行调优。
 
 SQL自诊断可以在不影响用户作业，不修改业务逻辑的情况下，诊断出相对准确的性能问题，为用户提供更为易用的性能调优参考。
 
