企业中文修改管理员指南关键字

--- a/content/zh/docs/Administratorguide/升级前准备与检查.md
+++ b/content/zh/docs/Administratorguide/升级前准备与检查.md
@@ -59,7 +59,7 @@
 </td>
 <td class="cellrowborder" valign="top" width="21.42%"><p id="p8993153053014"><a name="p8993153053014"></a><a name="p8993153053014"></a>备份数据</p>
 </td>
-<td class="cellrowborder" valign="top" width="32.29%"><p id="p189939306304"><a name="p189939306304"></a><a name="p189939306304"></a>参考《管理员指南》中的“备份与恢复”章节进行</p>
+<td class="cellrowborder" valign="top" width="32.29%"><p id="p189939306304"><a name="p189939306304"></a><a name="p189939306304"></a>参考《数据库运维指南》中的“备份与恢复”章节进行</p>
 </td>
 <td class="cellrowborder" valign="top" width="20%"><p id="p17993143018306"><a name="p17993143018306"></a><a name="p17993143018306"></a>升级前一天</p>
 </td>
@@ -160,7 +160,7 @@
 
 升级一旦失败，有可能会影响到业务的正常开展。提前备份数据，就可以在风险发生后，尽快的恢复业务。
 
-请参考《管理员指南》中的“备份与恢复”章节，完成数据的备份。
+请参考《数据库运维指南》中的“备份与恢复”章节，完成数据的备份。
 
 ## 获取升级包
 
