--- a/content/zh/docs/PerformanceTuning/数据库服务端及客户端绑核.md
+++ b/content/zh/docs/PerformanceTuning/数据库服务端及客户端绑核.md
@@ -1,7 +1,7 @@
 # 数据库服务端及客户端绑核<a name="ZH-CN_TOPIC_0263913273"></a>
 
 1.  安装openGauss数据库，具体操作请参考《openGauss 安装指南》。
-2.  停止数据库，具体操作请参考《openGauss 管理员指南》中的“启停openGauss”章节。
+2.  停止数据库，具体操作请参考《数据库运维指南》中的“启停openGauss”章节。
 3.  使用gs\_guc工具修改数据库端口、IP等，gs\_guc的使用请参考《openGauss 工具参考》中的“服务端工具\>gs\_guc”章节。
 4.  使用gs\_guc工具设置如下参数。
 
