修改关键字

--- a/content/zh/docs/Administratorguide/升级前准备与检查.md
+++ b/content/zh/docs/Administratorguide/升级前准备与检查.md
@@ -194,7 +194,7 @@ https://opengauss.org/zh/download/
    gs_checkos -i A
    ```
 
-   检查服务器的OS参数的目的是为了保证数据库正常通过预安装，并且在安装成功后可以安全高效的运行。详细的检查项目请参见《工具参考》中的“服务端工具 \> gs\_checkos”工具的“表1 操作系统检查项”。
+   检查服务器的OS参数的目的是为了保证数据库正常通过预安装，并且在安装成功后可以安全高效的运行。详细的检查项目请参见《工具与命令参考》中的“服务端工具 \> gs\_checkos”工具的“表1 操作系统检查项”。
 
 ## 检查数据库节点磁盘使用率
 
