--- a/content/zh/docs/Administratorguide/导出数据库.md
+++ b/content/zh/docs/Administratorguide/导出数据库.md
@@ -82,7 +82,7 @@ openGauss支持使用gs\_dump工具导出某个数据库级的内容，包含数
     </tbody>
     </table>
 
-    其他参数说明请参见《工具参考》中“服务端工具 \> gs\_dump”章节。
+    其他参数说明请参见《工具与命令参考》中“服务端工具 \> gs\_dump”章节。
 
 
 ## 示例<a name="zh-cn_topic_0283136854_zh-cn_topic_0237121169_zh-cn_topic_0096392335_s3e34e9e7c7e948d49d1f24d6038514c0"></a>
