--- a/content/zh/docs/Administratorguide/导出模式.md
+++ b/content/zh/docs/Administratorguide/导出模式.md
@@ -82,7 +82,7 @@ openGauss目前支持使用gs\_dump工具导出模式级的内容，包含模式
     </tbody>
     </table>
 
-    其他参数说明请参见《工具参考》中“服务端工具 \> gs\_dump”章节。
+    其他参数说明请参见《工具与命令参考》中“服务端工具 \> gs\_dump”章节。
 
 
 ## 示例<a name="zh-cn_topic_0283136726_zh-cn_topic_0237121170_zh-cn_topic_0096392705_s221cf543e4004d598aa6fafa8b79f843"></a>
