--- a/content/zh/docs/Administratorguide/常见故障定位手段.md
+++ b/content/zh/docs/Administratorguide/常见故障定位手段.md
@@ -205,7 +205,7 @@ Linux openGauss36 4.19.90-2003.4.0.0036.oe1.aarch64 #1 SMP Mon Mar 23 19:06:43 U
 
     **处理办法**：
 
-    1.  使用gs\_check检查网络配置是否符合标准。详细参考《工具参考》中“服务端工具 \> gs\_check”章节中对network的检查。
+    1.  使用gs\_check检查网络配置是否符合标准。详细参考《工具与命令参考》中“服务端工具 \> gs\_check”章节中对network的检查。
 
     2.  查看是否有进程发生core或重启，以及主备切换。
 
